# self_representator

./: .gitignore  README.md  chat.py  data_loaders.py  models.py  pyproject.toml  requirements.txt  self_representator.py
docs/: Anjalee Sudasinghe CV.md
